re PR debug/47991 (Var-tracking ICE on s390x *setmem_long insn)

PR debug/47991
	* var-tracking.c (find_use_val): Return NULL for
	cui->sets && cui->store_p BLKmode MEMs.

	* gcc.dg/pr47991.c: New test.

From-SVN: r170759